# python_hello_world

./: README.md
grpc/: Dockerfile  pyproject.toml
grpc/proto/: hello_world.proto
grpc/src/grpc/: client.py  server.py
grpc/src/pb/: hello_world_pb2.py  hello_world_pb2_grpc.py
grpc/tests/: test_server.py
